--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "animationconverterbot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@google-cloud/storage": "^5.7.1",
-    "ffmpeg": "0.0.4",
-    "node-telegram-bot-api": "^0.40.0",
-    "puppeteer-lottie": "^1.0.6"
-  }
+    "name": "animation-converter",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@google-cloud/storage": "^5.7.1",
+        "ffmpeg": "0.0.4",
+        "node-telegram-bot-api": "^0.40.0",
+        "puppeteer-lottie": "^1.0.6"
+    }
 }
