--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@google-cloud/storage": "^5.7.1",
+        "express": "^4.17.1",
         "ffmpeg": "0.0.4",
         "node-telegram-bot-api": "^0.40.0",
         "puppeteer-lottie": "^1.0.6"
